# sigrid-integrations

./: .gitignore  Dockerfile  README.md  cobol.json  integrations.sh  sigrid.yaml
get-scope-file/: README.md  (+1 more)
report-generator/: Dockerfile  MANIFEST.in  README.md  generate_placeholder_docs.py  pyproject.toml  setup.cfg  setup.py  sigrid.yaml
report-generator/docs/: developers.md  installation.md  placeholder descriptions.md
report-generator/src/: cli.py  run.py
report-generator/src/presets/: __init__.py  presets.py
report-generator/src/report_generator/: __init__.py  cli.py  constants.py  generic_utils.py  osh_report.py  powerpoint_report.py  report.py  report_generator.py  sigrid_api.py  slide_utils.py  smart_remarks.py  static_data.py  word_report.py  word_utils.py
report-generator/src/report_generator/data_models/: __init__.py  architecture.py  maintainability.py  osh.py
report-generator/src/report_generator/formatters/: __init__.py  formatters.py  smart_remarks.py
report-generator/src/report_generator/generator/: __init__.py  constants.py  report.py  report_generator.py  sigrid_api.py
report-generator/src/report_generator/placeholders/: __init__.py  base.py
report-generator/src/report_generator/presets/: __init__.py  presets.py
report-generator/tests/: list_diffs.py
report-generator/tests/report_generator/: test_data_models.py  test_docs.py  test_formatters.py  test_formatters_technologies.py  test_generic_utils.py  test_placeholders.py  test_report.py  test_report_utils.py  test_sigrid_api.py  test_slide_utils.py  test_time_series.py
(+84 files in other folders)
