[metadata]
name = report-generator
version = 0.1.4
author = Software Improvement Group (SIG)
author_email = support@softwareimprovementgroup.com
description = Generate Sigrid reports
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/Software-Improvement-Group/sigrid-integrations/tree/main/report-generator
license_files = LICENSE
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
keywords =
	report
	powerpoint
	excel
	word
	pdf

[options]
package_dir =
	= src
packages = find:
include_package_data=True
python_requires = >=3.9
install_requires =
	mistune==2.0.0rc1
	pyyaml==6.0.1
	click==8.1.7
	pillow==10.4.0
	# lxml version needs to be in sync with the py3-lxml package in the image
	lxml==5.3.0 
	python-pptx==1.0.2
	python-docx==1.1.0
	pygments==2.17.2
	requests==2.31.0
	importlib-resources==6.1.1
	python-dateutil==2.9.0

[options.extras_require]
test = pytest; pytest-mock

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    report-generator=report_generator.cli:run

